# mini-photo-editor

./: .gitignore  PYTHON_LIBRARIES.md  README.integration.md  README.md  README.rexx.md  Rexxjs_App_Integration.md  SCIPY_FILTERS.md  TODO.txt  example-scipy-usage.rexx  index.html  libvite.config.js  package.json  playwright.config.js  proposal.md  sample-state.json  vite.config.js
public/: manifest.json
public/samples/: langhe-1024.HEIC
src/: __section.js  _adjustments.js  _blender.js  _blur.js  _composition WORKING.js  _composition copy.js  _composition.js  _curves copy.js  _curves.js  _filters.js  _heal.js  _perspective.js  _pillow.js  _recipes.js  _resizer.js  _scipy.js  _skimage.js  app WORKING.js  app copy.js  app.css  app.js  editor.css  main.css  main.js  photo-editor-controlbus-bridge.js  photo-editor-controlbus.js  photo-editor-model.js  photo-editor-rexx-adapter.js  scipy-via-pyodide.js
src copy/: _adjustments.js  _blender.js  _composition.js  _curves.js  _filters.js  app.css  app.js  editor.css  main.css  main.js
src copy/components/: clickdropFile.js  cropper.js  histogram.js  splitview.js  themetoggle.js
src copy/js/: tools.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: canvasmouse.js  clickdropFile.js  colorcurve.css  colorcurve.js  cropper copy.js  cropper.css  cropper.js  downloadImage.js  filtermouse.js  fullscreen.js  generateImage.js  gpsmap.js  histogram.js  histogram_worker.js  perspective.js  perspective2.js  splitview.css  (+2 more)
tests/: test-moon-filter.rexx
(+29 files in other folders)
