[package]
name = "mini-photo-editor"
version = "0.1.1"
description = "Mini Photo Editor - Desktop app with RexxJS control bus"
authors = ["xdadda", "RexxJS Contributors"]
license = "MIT"
repository = "https://github.com/paul-hammant/RexxJS"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mini-photo-editor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

# Tauri plugins removed for now - can add back specific versions if needed
# [dependencies.tauri-plugin-log]
# git = "https://github.com/tauri-apps/plugins-workspace"
# branch = "v2"

# [dependencies.tauri-plugin-fs]
# git = "https://github.com/tauri-apps/plugins-workspace"
# branch = "v2"
